add search for playlists
Signed-off-by: CForrest97 <craforrest97@gmail.com>

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/Synthesise-Player/quadrivia#readme",
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "concurrently": "^5.0.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react-bootstrap": "^1.0.0-beta.16"
   }
 }
