add google firebase
Signed-off-by: CForrest97 <craforrest97@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "Spotify music quiz",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd server && npm start\" \"cd client && npm start\"",
+    "start": "firebase serve",
+    "start:functions": "firebase serve --only functions",
+    "start:hosting": "firebase serve --only hosting",
     "test": "concurrently \"cd server && npm t\" \"cd client && npm t\"",
-    "lint": "concurrently \"cd server && npm run lint\" \"cd client && npm run lint\""
+    "lint": "concurrently \"cd server && npm run lint\" \"cd client && npm run lint\"",
+    "deploy:cloud": "firebase deploy",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
