--- a/functions/package.json
+++ b/functions/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
+    "start:dev": "node src/app.js",
     "test": "jest --coverage",
-    "lint": "eslint .",
+    "lint": "eslint . --fix",
     "serve": "firebase serve --only functions",
     "shell": "firebase functions:shell",
     "deploy": "firebase deploy --only functions",
