--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "firebase serve",
     "start:functions": "firebase serve --only functions",
     "start:hosting": "firebase serve --only hosting",
-    "start:dev": "concurrently \"npm run start:functions\" \"cd client && npm run start\"",
+    "start:dev": "REACT_APP_SERVER_LOCATION=local concurrently \"(cd functions && npm run start:dev)\" \"cd client && npm start\"",
     "test": "concurrently \"cd server && npm t\" \"cd client && npm t\"",
     "lint": "concurrently \"cd server && npm run lint\" \"cd client && npm run lint\"",
-    "deploy": "firebase deploy",
+    "deploy": "npm run build && firebase deploy",
     "build": "cd client && npm run build"
   },
   "repository": {
@@ -28,5 +28,13 @@
     "concurrently": "^5.0.2",
     "express": "^4.17.1",
     "react-bootstrap": "^1.0.0-beta.16"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0"
   }
 }
